# lendbase

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  VIBE_NOTES.md  alembic.ini  pyproject.toml
.github/workflows/: actions.yml
docs/: PROD_READY.md  SCHEMA.md
migrations/: env.py
migrations/versions/: 20260412_0001_initial_inventory_schema.py  20260412_0002_add_admin_users.py  20260412_0003_rename_inventory_number_to_service_tag.py
src/lendbase/: __init__.py  __main__.py  app.py  auth.py  config.py  db.py  inventory.py  models.py  qr.py  web.py
src/lendbase/static/: styles.css
src/lendbase/templates/: base.html  home.html
src/lendbase/templates/auth/: login.html  setup_admin.html
src/lendbase/templates/inventory/: detail.html  form.html  list.html
tests/: test_app.py  test_auth.py  test_inventory.py  test_migrations.py
